add friend tests
